@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -39,7 +38,6 @@ import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -88,7 +86,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     private final ConcurrentMap<String, ChildData<T>> currentData = new ConcurrentHashMap<>();
     private final AtomicBoolean started = new AtomicBoolean();
     private final AtomicBoolean connected = new AtomicBoolean();
-    private final SequenceComparator sequenceComparator = new SequenceComparator();
+    private final SequenceComparator<T> sequenceComparator = new SequenceComparator<T>();
     private final String uuid = UUID.randomUUID().toString();
 
     private volatile String id;
@@ -313,7 +311,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     @Override
     public Map<String, T> members() {
         List<ChildData<T>> children = getActiveChildren();
-        Collections.sort(children, sequenceComparator);
+        children.sort(sequenceComparator);
         Map<String, T> members = new LinkedHashMap<>();
         for (ChildData<T> child : children) {
             members.put(child.getPath(), child.getNode());
@@ -324,14 +322,14 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     @Override
     public boolean isMaster() {
         List<ChildData<T>> children = getActiveChildren();
-        Collections.sort(children, sequenceComparator);
+        children.sort(sequenceComparator);
         return !children.isEmpty() && children.get(0).getPath().equals(id);
     }
 
     @Override
     public T master() {
         List<ChildData<T>> children = getActiveChildren();
-        Collections.sort(children, sequenceComparator);
+        children.sort(sequenceComparator);
         if (children.isEmpty()) {
             return null;
         }
@@ -341,7 +339,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     @Override
     public List<T> slaves() {
         List<ChildData<T>> children = getActiveChildren();
-        Collections.sort(children, sequenceComparator);
+        children.sort(sequenceComparator);
         List<T> slaves = new ArrayList<>();
         for (int i = 1; i < children.size(); i++) {
             slaves.add(children.get(i).getNode());
@@ -390,14 +388,14 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
      *
      * @return list of children and data
      */
-    public List<ChildData> getCurrentData() {
+    public List<ChildData<T>> getCurrentData() {
         return new ArrayList<>(currentData.values());
     }
 
     /**
      * Used for testing purpose
      */
-    void putCurrentData(String key, ChildData value) {
+    void putCurrentData(String key, ChildData<T> value) {
         currentData.put(key, value);
     }
 
@@ -408,7 +406,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
      * @param  fullPath full path to the node to check
      * @return          data or null
      */
-    public ChildData getCurrentData(String fullPath) {
+    public ChildData<T> getCurrentData(String fullPath) {
         return currentData.get(fullPath);
     }
 
@@ -454,7 +452,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
         try {
             ensurePath.ensure(client.getZookeeperClient());
             List<String> children = client.getChildren().usingWatcher(childrenWatcher).forPath(path);
-            Collections.sort(children, (String left, String right) -> left.compareTo(right));
+            children.sort((String left, String right) -> left.compareTo(right));
             processChildren(children, mode);
         } catch (Exception e) {
             handleException(e);
@@ -491,7 +489,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     }
 
     protected void remove(String fullPath) {
-        ChildData data = currentData.remove(fullPath);
+        ChildData<T> data = currentData.remove(fullPath);
         if (data != null) {
             offerOperation(new EventOperation(this, GroupListener.GroupEvent.CHANGED));
         }
@@ -523,7 +521,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     }
 
     private void processChildren(List<String> children, RefreshMode mode) throws Exception {
-        List<String> fullPaths = children.stream().map(c -> ZKPaths.makePath(path, c)).collect(Collectors.toList());
+        List<String> fullPaths = children.stream().map(c -> ZKPaths.makePath(path, c)).toList();
 
         Set<String> removedNodes = new HashSet<>(currentData.keySet());
         fullPaths.forEach(removedNodes::remove);
@@ -569,8 +567,7 @@ public class ZooKeeperGroup<T extends NodeState> implements Group<T> {
     }
 
     private byte[] encode(T state) {
-        try {
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
             mapper.writeValue(baos, state);
             return baos.toByteArray();
         } catch (IOException e) {
